tests/baselines/reference/classMemberWithMissingIdentifier(strict=true).errors.txt
classMemberWithMissingIdentifier.ts(2,11): error TS1146: Declaration expected.
classMemberWithMissingIdentifier.ts(2,11): error TS7008: Member '(Missing)' implicitly has an 'any' type.
classMemberWithMissingIdentifier.ts(2,12): error TS1005: ';' expected.
classMemberWithMissingIdentifier.ts(3,1): error TS1128: Declaration or statement expected.


==== classMemberWithMissingIdentifier.ts (4 errors) ====
    class C { 
        public {};
              
!!! error TS1146: Declaration expected.
              
!!! error TS7008: Member '(Missing)' implicitly has an 'any' type.
               ~
!!! error TS1005: ';' expected.
    }
    ~
!!! error TS1128: Declaration or statement expected.